# standalone-courgette

./: .gitignore  .gitmodules  .gn  BUILD.gn  BUILDCONFIG.gn  LICENSE  README.txt  build.sh  lzma_sdk.patch
